--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js",
+    "start": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "prisma": "^2.20.1"
   },
   "dependencies": {
+    "@prisma/client": "^2.20.1",
     "apollo-server": "^2.22.2",
     "graphql": "^15.5.0"
   }
